name:                css-easings
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/css-easings#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu@gmail.com
copyright:           2019 Willem Van Onsem
category:            webdevelopment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
        Css.Easing
  build-depends:
      base >=4.7 && <5
    , data-default >=0.7 && <0.8
    , QuickCheck >=2.13 && <2.14
    , scientific >=0.3 && <0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/css-easings
